@@ -1,6 +1,8 @@
 2012-04-01  Niels Möller  <nisse@lysator.liu.se>
 
 	* salsa20.c (LE_SWAP32): Typo fix for big-endian case.
+	(QROUND): New macro.
+	(salsa20_hash): Use it.
 
 2012-03-31  Niels Möller  <nisse@lysator.liu.se>
 
